--- a/src/app/chat/chat-item/chat-item.component.html
+++ b/src/app/chat/chat-item/chat-item.component.html
@@ -1,3 +1,3 @@
-<p>{{usuario}}</p>
-<p>{{mensagem}}</p>
-<p>{{hora}}</p>
+<p>{{mensagem["author"]}}</p>
+<p>{{mensagem["message"]}}</p>
+<p>{{mensagem["time"]}}</p>
