novas features criadas

--- a/src/app/chat/chat-item/chat-item.component.html
+++ b/src/app/chat/chat-item/chat-item.component.html
@@ -1,3 +1,5 @@
-<p>{{mensagem["author"]}}</p>
-<p>{{mensagem["message"]}}</p>
-<p>{{mensagem["time"]}}</p>
+<li class="list-group-item" [ngClass]="{'my-message': minhaMensagem()}">
+    <p>{{mensagem["author"]}}</p>
+    <p>{{mensagem["message"]}}</p>
+    <p>{{mensagem["time"] | date: "HH:mm:ss"}}</p>
+</li>
