ajustes finais e criação de um httpclient

--- a/src/app/chat/chat-header/chat-header.component.html
+++ b/src/app/chat/chat-header/chat-header.component.html
@@ -2,4 +2,8 @@
   <h1>Chat Bootcamp</h1>
   <p>Bem-vindo {{usuario}}</p>
   <p>Logado em: {{logTime | date:"dd/MM/yy"}}</p>
+
+  <a [routerLink]="'/chat'">Chat</a>
+  <a [routerLink]="'/sobre'">Sobre</a>
+  
 </div>
